schedule card responsive, navbar alignment fix to last submenu

--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -149,8 +149,9 @@ a#navbar_logo_link {
 	margin-top: 1em;
 }
 
-.topnav__submenu .open-left {
-	align-items: flex-end;
+ul.open-left {
+	right: 0;
+	margin-top: 1em;
 }
 
 .topnav__links a.active:after,
@@ -185,12 +186,7 @@ a#navbar_logo_link {
 	}
 
 	.topnav__submenu .open-left {
-		align-items: flex-end;
-	}
-
-	ul.open-left {
 		right: 0;
-		align-items: flex-end;
 	}
 
 	.has_submenu:hover > ul {
@@ -349,7 +345,7 @@ a#navbar_logo_link {
 	}
 }
 
-@media (max-width: 430px) {
+@media (max-width: 450px) {
 	#navbar_logo_text {
 		display: none;
 	}
